2015-01-29  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Improved numeric literal parsing and error messages

2014-08-11  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Replaced the errorCheck method by the errors and warnings methods.
    The errorCheck method took collections as arguments, where the semantic
    problems were inserted. The preferred method is to just fetch the
    internal collections of the compilation unit.

2014-07-23  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Added -XstructuredPrint flag to JastAddJ main class

2014-06-04  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Removed implicit constructor list rewrites
        - Renamed isDefaultConstructor() to isImplicitConstructor()

    * Removed variable declaration list rewrites
        - VarDeclStmt is no longer rewritten to a separate VariableDeclaration
          statements.
        - VarDeclStmt now has an NTA list of single declarations named
          SingleDecl
        - VariableDeclaration no longer inherits from Stmt.
    Since VariableDeclaration is now a child of VarDeclStmt some inherited
    attributes needed to be changed in order to properly propagate values to
    VariableDeclaration nodes.

2014-06-02  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Merged Erik Hogemans Java 8 module.

2014-05-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed errors in the Expr.canBeTrue() and Expr.canBeFalse() attributes.
    * The code generator now tries to avoid redundant GOTOs after conditional
    branches.

2014-05-05  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed pretty printing problem for annotation declarations
    (the `@` in `@interface` was omitted)
    * Added -XprettyPrint command-line flag which will cause pretty printing
    of the source files
    * Added -XdumpTree command-line flag which will cause dumping the abstract
    syntax tree of the parsed source files

2014-04-15  Jesper Öqvist <jesper.oqvist@cs.lth.se>
