@@ -4,6 +4,7 @@
  * modified BSD license with this compiler.
  *
  * Copyright (c) 2005-2008, Torbjorn Ekman
+ *               2014-2015, Jesper Öqvist <jesper.oqvist@cs.lth.se>
  * All rights reserved.
  */
 
@@ -108,6 +109,9 @@ aspect LookupFullyQualifiedTypes {
    */
   eq Program.getChild().lookupType(String packageName, String typeName) = lookupType(packageName, typeName);
 
+  private Map<String, TypeDecl> Program.sourceTypeMap = new HashMap<String, TypeDecl>();
+  private boolean Program.sourceTypeMapInitialized = false;
+
   /**
    * Checks from-source compilation units for the given type.
    * If no matching compilation unit is found the library compliation units
@@ -115,38 +119,52 @@ aspect LookupFullyQualifiedTypes {
    */
   syn lazy TypeDecl Program.lookupType(String packageName, String typeName) {
     String fullName = packageName.equals("") ? typeName : packageName + "." + typeName;
-    // Check for type in source
-    for(int i = 0; i < getNumCompilationUnit(); i++) {
-      for(int j = 0; j < getCompilationUnit(i).getNumTypeDecl(); j++) {
-        TypeDecl type = getCompilationUnit(i).getTypeDecl(j);
-        if(type.fullName().equals(fullName)) {
-          return type;
+    if (!sourceTypeMapInitialized) {
+      // initialize source type map
+      for (int i = 0; i < getNumCompilationUnit(); i++) {
+        CompilationUnit unit = getCompilationUnit(i);
+        for (int j = 0; j < unit.getNumTypeDecl(); j++) {
+          TypeDecl type = unit.getTypeDecl(j);
+          sourceTypeMap.put(type.fullName(), type);
         }
       }
+      sourceTypeMapInitialized = true;
+    }
+    // Check for type in source
+    if (sourceTypeMap.containsKey(fullName)) {
+      return sourceTypeMap.get(fullName);
     }
     // Check for type in library
     return lookupLibType(packageName, typeName);
   }
+
+  private Map<String, TypeDecl> Program.libraryTypeMap = new HashMap<String, TypeDecl>();
+  private boolean Program.primitiveTypeMapInitialized = false;
+
   /**
    * Lookup types in the library
    */
   syn lazy TypeDecl Program.lookupLibType(String packageName, String typeName) {
     String fullName = packageName.equals("") ? typeName : packageName + "." + typeName;
+
     // Check the primitive types
-    if (packageName.equals(PRIMITIVE_PACKAGE_NAME)) {
+    if (!primitiveTypeMapInitialized) {
+      // initialize primitive type map
       PrimitiveCompilationUnit unit = getPrimitiveCompilationUnit();
-      if (typeName.equals("boolean")) return unit.typeBoolean();
-      if (typeName.equals("byte")) return unit.typeByte();
-      if (typeName.equals("short")) return unit.typeShort();
-      if (typeName.equals("char")) return unit.typeChar();
-      if (typeName.equals("int")) return unit.typeInt();
-      if (typeName.equals("long")) return unit.typeLong();
-      if (typeName.equals("float")) return unit.typeFloat();
-      if (typeName.equals("double")) return unit.typeDouble();
-      if (typeName.equals("null")) return unit.typeNull();
-      if (typeName.equals("void")) return unit.typeVoid();
-      if (typeName.equals("Unknown")) return unit.unknownType(); // Is this needed?
+      libraryTypeMap.put("@primitive.boolean", unit.typeBoolean());
+      libraryTypeMap.put("@primitive.byte", unit.typeByte());
+      libraryTypeMap.put("@primitive.short", unit.typeShort());
+      libraryTypeMap.put("@primitive.char", unit.typeChar());
+      libraryTypeMap.put("@primitive.int", unit.typeInt());
+      libraryTypeMap.put("@primitive.long", unit.typeLong());
+      libraryTypeMap.put("@primitive.float", unit.typeFloat());
+      libraryTypeMap.put("@primitive.double", unit.typeDouble());
+      libraryTypeMap.put("@primitive.null", unit.typeNull());
+      libraryTypeMap.put("@primitive.void", unit.typeVoid());
+      libraryTypeMap.put("@primitive.Unknown", unit.unknownType());
+      primitiveTypeMapInitialized = true;
     }
+
     // Check the library:
     //  A type may not be in the library but an NTA cannot map to null.
     //  We need to do some double work to step around this.
@@ -154,24 +172,31 @@ aspect LookupFullyQualifiedTypes {
     //  to prevent that we call the nta for a name that gives null back
     //else if (getCompilationUnit(fullName) != null) {
 
+    if (libraryTypeMap.containsKey(fullName)) {
+      return libraryTypeMap.get(fullName);
+    }
+
     // Found a library unit, check it for type
     CompilationUnit libUnit = getLibCompilationUnit(fullName);
     if (libUnit != null) {
-      for(int j = 0; j < libUnit.getNumTypeDecl(); j++) {
+      for (int j = 0; j < libUnit.getNumTypeDecl(); j++) {
         TypeDecl type = libUnit.getTypeDecl(j);
-        if(type.fullName().equals(fullName)) {
-          return type;
+        if (!libraryTypeMap.containsKey(type.fullName())) {
+          libraryTypeMap.put(type.fullName(), type);
         }
+      }
+      if (libraryTypeMap.containsKey(fullName)) {
+        return libraryTypeMap.get(fullName);
       }
     }
     // No type found in the library
     return null;
   }
+
   // Store library units (including primitive unit) in a parameterized nta
   syn nta CompilationUnit Program.getLibCompilationUnit(String fullName) {
     return getCompilationUnit(fullName);
   }
-
 
 }
 
