@@ -1,39 +1,0 @@
-Java1.4Frontend/AST
-Java1.4Backend/AST
-Java1.5Frontend/AST
-Java1.5Backend/doc
-Java7Frontend/AST
-Java7Frontend/beaver
-Java7Frontend/parser
-Java7Frontend/scanner
-Java7Frontend/doc
-Java7Backend/AST
-Java7Backend/beaver
-Java7Backend/parser
-Java7Backend/scanner
-Java7Backend/JavaPrettyPrinter.java
-Java7Backend/doc
-*.class
-Java1.5Backend/AST
-Java1.5Backend/beaver
-Java1.5Backend/parser
-Java1.5Backend/scanner
-Java7Backend/JastAddJ.properties
-Java1.4Backend/beaver
-Java1.4Backend/parser
-Java1.4Backend/scanner
-Java1.4Frontend/parser/JavaParser.all
-Java1.4Frontend/parser/JavaParser.beaver
-Java1.4Frontend/parser/JavaParser.java
-Java1.4Frontend/scanner/JavaScanner.flex
-Java1.4Frontend/scanner/JavaScanner.java
-Java1.5Frontend/beaver
-Java1.5Frontend/parser/JavaParser.all
-Java1.5Frontend/parser/JavaParser.beaver
-Java1.5Frontend/parser/JavaParser.java
-Java1.5Frontend/scanner/JavaScanner.flex
-Java1.5Frontend/scanner/JavaScanner.java
-Java1.5Frontend/scanner/Unicode.java
-Java7Frontend/JastAddJ.properties
-*.sh
-*.patch
