@@ -1,19 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<classpath>
-	<classpathentry kind="src" path="src/gen">
-		<attributes>
-			<attribute name="ignore_optional_problems" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="src" path="src/backend"/>
-	<classpathentry kind="src" path="src/frontend"/>
-	<classpathentry kind="lib" path="tools/beaver-ant.jar"/>
-	<classpathentry kind="lib" path="tools/beaver-rt.jar"/>
-	<classpathentry kind="lib" path="tools/jastadd2.jar"/>
-	<classpathentry kind="lib" path="tools/JastAddParser.jar"/>
-	<classpathentry kind="lib" path="tools/JFlex.jar"/>
-	<classpathentry kind="lib" path="tools/RagDoll.jar"/>
-	<classpathentry kind="lib" path="tools/ant-1.9.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
-</classpath>
