@@ -1,14 +1,0 @@
-*.swp
-/bin
-/ant-bin
-/src/gen
-/src/tmp
-/doc
-/jastaddj-*.zip
-/jastaddj*.jar
-/src/res/JavaSupportLevel.properties
-/fileset.tmp
-/test
-
-# temporary files
-/tmp
