@@ -1,3 +1,12 @@
+2015-01-30  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Added type lookup caches for improved type lookup.
+    * Fixed error where a library type could be incorrectly reported as
+    duplicate declarations when local declarations in source files on the
+    source path contained the same type. This issue was caused by library
+    type lookups only working as intended with types having the same name
+    as the containing compilation unit.
+
 2015-01-29  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Improved numeric literal parsing and error messages
